[package]
name = "xplm-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.16"
glow = "0.11"
gl_loader = "0.1"
xplm = { path = "../rust-xplm" }
memoffset = "0.6"

[dev-dependencies]
anyhow = "1"

[[example]]
name = "hello"
crate-type = ["cdylib"]
